first part of fix
