# public/swagger.json
@@ -6,49 +6,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IExerciseBody": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"group_id": {
-						"type": "number",
-						"format": "double"
-					},
-					"test": {
-						"properties": {
-							"port": {
-								"type": "number",
-								"format": "double"
-							},
-							"password": {
-								"type": "string",
-								"nullable": true
-							},
-							"username": {
-								"type": "string"
-							},
-							"host": {
-								"type": "string"
-							}
-						},
-						"required": [
-							"port",
-							"password",
-							"username",
-							"host"
-						],
-						"type": "object"
-					}
-				},
-				"required": [
-					"name",
-					"group_id",
-					"test"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"IUser": {
 				"properties": {
 					"id": {
@@ -256,9 +213,7 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/IExerciseBody"
-							}
+							"schema": {}
 						}
 					}
 				}
