# src/types/IExerciseBody.ts
@@ -1,10 +1,3 @@
 export interface IExerciseBody {
-    name: string,
     group_id: number;
-    test: {
-        host: string,
-        username: string,
-        password: string | null,
-        port: number
-    }
 }
