# src/types/IExerciseFullBody.ts
@@ -1,0 +1,11 @@
+export interface IExerciseFullBody {
+    id_student: number;
+    name: string;
+    group_id: number;
+    test: {
+        host: string;
+        username: string;
+        password: string;
+        port: number;
+    }
+}
